--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,7 @@
 ---
+import '@fontsource-variable/bricolage-grotesque';
+import Header from '../components/Header.astro'
+
 interface Props {
 	title: string;
 }
@@ -17,6 +20,7 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
+		<Header />
 		<slot />
 	</body>
 </html>
@@ -33,8 +37,8 @@ const { title } = Astro.props;
 		);
 	}
 	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
+		font-family: 'Bricolage Grotesque Variable', sans-serif;
+		background: #ffffff;
 		background-size: 224px;
 	}
 	code {
