--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,52 +1,52 @@
 ---
-
-const description = 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.'
+import Button from '../components/Button.astro';
 
 const navItems = [
   {
-    title: 'Project One',
-    description,
-    image: '/projects/project-1.jpg',
-    // url: '/#home',
+    title: 'modio Clothing Store',
+    description:
+      'An ecommerce platform for a fictional clothing store called modio. Users can browse through a wide range of clothing items, add them to their cart, and proceed to checkout. Built with a focus on user experience and smooth navigation.',
+    image: '/projects/project-1.png',
+    url: 'https://modio-clothing-store.onrender.com/',
   },
   {
-    title: 'Project Two',
-    description,
-    image: '/projects/project-2.jpg',
-    // url: '/#projects',
+    title: 'ABA Blog app',
+    description:
+      "A feature-rich blog application with user management capabilities, inspired by the exercise developed in the Full Stack Open course offered by the University of Helsinki. Users can sign up, create, like and comment on different posts. You can login with username 'guestUser' and password 'SuperSecretPass'",
+    image: '/projects/project-2.png',
+    url: 'https://aba-blog-app.onrender.com/',
   },
   {
-    title: 'Project Three',
-    description,
-    image: '/projects/project-3.jpg',
-    // url: '/#skills',
+    title: 'thoughts.',
+    description:
+      'A simple yet engaging platform where users from all around the world can discover and share some quick ideas, fostering creativity and inspiration across diverse cultures and backgrounds.',
+    image: '/projects/project-3.png',
+    url: 'https://thoughts-p437.onrender.com/',
   },
 ];
 ---
 
-<section id="projects" class='w-[1000px] m-auto pb-16'>
-  <h1 class="text-4xl font-bold py-10 text-center">Projects</h1>
-  <div class="grid grid-cols-1">
+<section id="projects" class="md:mb-24">
+  <h1 class="text-2xl font-bold text-center mb-12 md:text-3xl">Projects</h1>
+  <div class="md:max-w-5xl md:mx-auto mb-16">
     {
       navItems.map((project) => (
-        <div class="mb-8 gap-10 grid grid-cols-Uno/dos">
+        <div class="md:flex my-6">
           <img
             src={project.image}
-            class='h-full w-auto object-cover rounded-xl col-span-1 self-center justify-self-end'
+            class="w-full h-auto md:max-w-96 md:rounded-2xl"
           />
-          <div class="col-span-2 sm:col-span-1"> <!-- Para que el texto ocupe las 2 columnas en pantallas pequeñas y 1 columna en pantallas grandes -->
-            <h3 class="text-3xl font-semibold mb-4">{project.title}</h3>
-            <p class="text-lg">{description}</p>
-              <a
-                href="#"
-                class="bg-[#2000FF] hover:bg-[#1200AA] text-white font-regular my-6 py-2 px-4 rounded-xl shadow-xl inline-block"
-              >
-                Try it out
-              </a>
+          <div class="p-4">
+            <h3 class="text-xl font-bold mb-4 text-center md:text-left">
+              {project.title}
+            </h3>
+            <p class="mb-5">{project.description}</p>
+            <div class="text-center md:text-left">
+              <Button href={project.url}>Try it out</Button>
+            </div>
           </div>
         </div>
       ))
     }
   </div>
 </section>
-
