--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -1,22 +1,30 @@
-<section id="about-me" class="pb-20">
-  <h1 class="text-4xl font-bold py-10 text-center">Personal Features</h1>
-  <div class="flex justify-center gap-3">
-    <div>
-      <img src="/me-2.png" alt="Photo of Victor Gomez smiling" />
+---
+import Button from '../components/Button.astro';
+---
+
+<section id="about-me" class="mb-10">
+  <h2 class="text-2xl font-bold text-center mb-10 md:text-3xl">Personal Features</h2>
+  <div class='md:flex md:justify-center md:max-w-5xl md:mx-auto md:gap-5'>
+    <div class="flex justify-center">
+      <img
+        class="max-w-72 mb-5 md:max-w-96"
+        src="/me-2.png"
+        alt="Photo of Victor Gomez smiling"
+      />
     </div>
-    <div class="flex-col pt-14">
-      <h3 class="text-3xl mb-8">🖌️ Graphic Design background</h3>
-      <h3 class="text-3xl mb-8">🤝 Enthusiastic about collaborating</h3>
-      <h3 class="text-3xl mb-8">📚 Motivated to constantly learn</h3>
-      <h3 class="text-3xl mb-8">🕒 Disciplined to work efficiently</h3>
-      <p class="text-xl">More info ↓</p>
-      <div class='mt-3'>
-        <a
-          href="mailto:correo@ejemplo.com"
-          class="bg-[#2000FF] transition-transform hover:scale-105 text-white font-regular py-2 px-2 rounded-2xl shadow-2xl"
-        >
-          Download curriculum as PDF
-        </a>
+    <div>
+      <div class="text-center md:mt-12">
+        <div class="inline-block text-left">
+          <h3 class='md:text-2xl md:mb-4'>🖌️ Graphic Design background</h3>
+          <h3 class='md:text-2xl md:mb-4'>🤝 Enthusiastic about collaborating</h3>
+          <h3 class='md:text-2xl md:mb-4'>📚 Motivated to constantly learn</h3>
+          <h3 class='md:text-2xl md:mb-4'>🕒 Disciplined to work efficiently</h3>
+        </div>
+      </div>
+      
+      <div class="text-center mt-4 md:text-left">
+        <p>More info ↓</p>
+        <Button>Download curriculum as PDF</Button>
       </div>
     </div>
   </div>
