stack updated and favicon added

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -8,8 +8,9 @@ import Button from '../components/Button.astro';
     <div class="flex justify-center">
       <img
         class="max-w-72 mb-5 md:max-w-96"
-        src="/me-2.png"
+        src="/me-2-min.png"
         alt="Photo of Victor Gomez smiling"
+        loading="lazy"
       />
     </div>
     <div>
