--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,7 +6,7 @@ import LinkedIn from '../components/icons/LinkedIn.astro';
 
 <section id="hero" class="mx-auto py-20 md:flex md:justify-center md:items-center md:py-40">
   <div class="flex justify-center">
-    <img class="w-72 h-full" src="/me.png" alt="Victor Gomez Photo" />
+    <img class="w-72 h-full" src="/me-min.png" alt="Victor Gomez Photo" loading="lazy" />
   </div>
   <div class="text-center my-6 md:ml-6 md:text-center md:mt-0">
     <h1 class="text-4xl font-semibold md:text-5xl">Victor Gomez</h1>
