--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,7 +6,7 @@ import LinkedIn from '../components/icons/LinkedIn.astro';
 
 <section id="hero" class="mx-auto py-20 md:flex md:justify-center md:items-center md:py-40">
   <div class="flex justify-center">
-    <img class="w-72 h-full" src="/me-min.png" alt="Victor Gomez Photo" loading="lazy" />
+    <img class="w-72 h-72 object-cover" src="/me-min.png" alt="Victor Gomez Photo" width="288" height="288" loading="lazy" />
   </div>
   <div class="text-center my-6 md:ml-6 md:text-center md:mt-0">
     <h1 class="text-4xl font-semibold md:text-5xl">Victor Gomez</h1>
@@ -14,10 +14,10 @@ import LinkedIn from '../components/icons/LinkedIn.astro';
     <Button href="mailto:vhgomez.py@gmail.com">Contact me</Button>
     <div class="flex gap-2 justify-center md:justify-center mt-3">
       <a href="https://github.com/bebigomez" target="_blank" rel="noopener">
-        <GitHub class="h-7 w-7 transition-transform hover:scale-105" />
+        <GitHub class="h-7 w-7 transition-transform duration-200 hover:scale-105" />
       </a>
       <a href="https://www.linkedin.com/in/victor-gomez-dev" target="_blank" rel="noopener">
-        <LinkedIn class="h-7 w-7 transition-transform hover:scale-105" />
+        <LinkedIn class="h-7 w-7 transition-transform duration-200 hover:scale-105" />
       </a>
     </div>
   </div>
