--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -11,8 +11,9 @@ const navItems = [
   },
   {
     title: 'ABA Blog app',
+    credentials: "Login with username 'guestUser' and password 'SuperSecretPass'.",
     description:
-      "A feature-rich blog application with user management capabilities, inspired by the exercise developed in the Full Stack Open course offered by the University of Helsinki. Users can sign up, create, like and comment on different posts. You can login with username 'guestUser' and password 'SuperSecretPass'",
+      "A feature-rich blog application with user management capabilities, inspired by the exercise developed in the Full Stack Open course offered by the University of Helsinki. Users can sign up, create, like and comment on different posts.",
     image: '/projects/project-2.png',
     url: 'https://aba-blog-app.onrender.com/',
   },
@@ -30,16 +31,20 @@ const navItems = [
   <h1 class="text-2xl font-bold text-center mb-12 md:text-3xl">Projects</h1>
   <div class="md:max-w-5xl md:mx-auto mb-16">
     {
-      navItems.map((project) => (
+      navItems.map((project, index) => (
         <div class="md:flex my-6">
           <img
             src={project.image}
-            class="w-full h-auto md:max-w-96 md:rounded-2xl"
+            alt={project.title}
+            width="384"
+            height="256"
+            class="w-full h-auto md:w-96 md:h-72 md:rounded-2xl bg-gray-300"
           />
           <div class="p-4">
             <h3 class="text-xl font-bold mb-4 text-center md:text-left">
               {project.title}
             </h3>
+            {project.credentials && <p class="mb-5">{project.credentials}</p>}
             <p class="mb-5">{project.description}</p>
             <div class="text-center md:text-left">
               <Button href={project.url}>Try it out</Button>
