--- a/src/components/Stack.astro
+++ b/src/components/Stack.astro
@@ -26,12 +26,15 @@ const technologies = [
     class="grid grid-cols-2 gap-8 max-w-72 mx-auto justify-items-center items-center mb-10 md:grid-cols-4 md:max-w-5xl"
   >
     {
-      technologies.map((item) => (
+      technologies.map((item, index) => (
         <div>
           <img
             src={`/stack/${item}.svg`}
             class="max-h-16 max-w-20"
             alt={`${item} icon`}
+            loading="lazy"
+            width="80"
+            height="80"
           />
         </div>
       ))
