--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,15 +26,7 @@ const { title } = Astro.props;
 </html>
 <style is:global>
   :root {
-    --accent: 136, 58, 234;
-    --accent-light: 224, 204, 250;
-    --accent-dark: 49, 10, 101;
-    --accent-gradient: linear-gradient(
-      45deg,
-      rgb(var(--accent)),
-      rgb(var(--accent-light)) 30%,
-      white 60%
-    );
+    --primary: #2000FF;
   }
   html {
     font-family: 'Bricolage Grotesque Variable', sans-serif;
