resize and convert images to webp format

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -6,7 +6,7 @@ const navItems = [
     title: 'modio Clothing Store',
     description:
       'An ecommerce platform for a fictional clothing store called modio. Users can browse through a wide range of clothing items, add them to their cart, and proceed to checkout. Built with a focus on user experience and smooth navigation.',
-    image: '/projects/project-1.png',
+    image: '/projects/project-1.webp',
     url: 'https://modio-clothing-store.onrender.com/',
   },
   {
@@ -14,14 +14,14 @@ const navItems = [
     credentials: "Login with username 'guestUser' and password 'SuperSecretPass'.",
     description:
       "A feature-rich blog application with user management capabilities, inspired by the exercise developed in the Full Stack Open course offered by the University of Helsinki. Users can sign up, create, like and comment on different posts.",
-    image: '/projects/project-2.png',
+    image: '/projects/project-2.webp',
     url: 'https://aba-blog-app.onrender.com/',
   },
   {
     title: 'thoughts.',
     description:
       'A simple yet engaging platform where users from all around the world can discover and share some quick ideas, fostering creativity and inspiration across diverse cultures and backgrounds.',
-    image: '/projects/project-3.png',
+    image: '/projects/project-3.webp',
     url: 'https://thoughts-p437.onrender.com/',
   },
 ];
