--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -8,7 +8,7 @@ import Button from '../components/Button.astro';
     <div class="flex justify-center">
       <img
         class="max-w-72 mb-5 md:max-w-96"
-        src="/me-2-min.png"
+        src="/me-2-min.webp"
         alt="Photo of Victor Gomez smiling"
         loading="lazy"
         width="384"
