--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -13,10 +13,10 @@ import LinkedIn from '../components/icons/LinkedIn.astro';
     <h2 class="font-normal text-lg mb-3 md:text-2xl">Full Stack Web Developer</h2>
     <Button href="mailto:vhgomez.py@gmail.com">Contact me</Button>
     <div class="flex gap-2 justify-center md:justify-center mt-3">
-      <a href="https://github.com/bebigomez" target="_blank" rel="noopener">
+      <a href="https://github.com/bebigomez" target="_blank" rel="noopener" aria-label="bebigomez GitHub Page">
         <GitHub class="h-7 w-7 transition-transform duration-200 hover:scale-105" />
       </a>
-      <a href="https://www.linkedin.com/in/victor-gomez-dev" target="_blank" rel="noopener">
+      <a href="https://www.linkedin.com/in/victor-gomez-dev" target="_blank" rel="noopener" aria-label="Victor Gomez LinkedIn Page">
         <LinkedIn class="h-7 w-7 transition-transform duration-200 hover:scale-105" />
       </a>
     </div>
