--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Projects from '../components/Projects.astro';
 import Features from '../components/Features.astro';
 import Stack from '../components/Stack.astro';
 import Footer from '../components/Footer.astro'
+import Experience from '../components/Experience.astro';
 
 ---
 
@@ -12,6 +13,7 @@ import Footer from '../components/Footer.astro'
   <main>
     <Hero />
     <Projects />
+    <Experience />
     <Stack />
 		<Features />
     <Footer />
