--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,23 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import Header from '../components/Header.astro';
 import Hero from '../components/Hero.astro';
 import Projects from '../components/Projects.astro';
-import Features from '../components/Features.astro';
-import Stack from '../components/Stack.astro';
-import Footer from '../components/Footer.astro'
 import Experience from '../components/Experience.astro';
+import Stack from '../components/Stack.astro';
+import Features from '../components/Features.astro';
+import Footer from '../components/Footer.astro'
 
 ---
 
 <Layout title="BebiGomez Dev">
-  <main>
-    <Hero />
+  <main class="text-neutral-800">
+    <!-- <Header /> -->
+    <!-- <Hero /> -->
     <Projects />
-    <Experience />
+    <!-- <Experience />
     <Stack />
 		<Features />
-    <Footer />
+    <Footer /> -->
   </main>
 </Layout>
