--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,13 +11,13 @@ import Footer from '../components/Footer.astro'
 ---
 
 <Layout title="BebiGomez Dev">
-  <main class="text-neutral-800">
-    <!-- <Header /> -->
-    <!-- <Hero /> -->
+  <main class="dark:bg-neutral-800 dark:text-white dark:fill-white">
+    <Header />
+    <Hero />
     <Projects />
-    <!-- <Experience />
+    <Experience />
     <Stack />
 		<Features />
-    <Footer /> -->
+    <Footer />
   </main>
 </Layout>
