improve dark mode

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Footer from '../components/Footer.astro'
 ---
 
 <Layout title="BebiGomez Dev">
-  <main class="dark:bg-neutral-800 dark:text-white dark:fill-white">
+  <main class="bg-neutral-50 dark:bg-neutral-800 text-neutral-800 dark:text-neutral-50 dark:fill-neutral-50 transition-colors duration-500">
     <Header />
     <Hero />
     <Projects />
