--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -25,10 +25,10 @@ const navItems = [
 
 <header
   id='myHeader'
-  class='fixed right-0 left-0 top:0 transition duration-500 z-50'
+  class='fixed right-0 left-0 top:0 transition-transform duration-500 z-50'
 >
   <nav
-    class='bg-white dark:bg-neutral-800 text-1xl font-medium text-center py-4 md:text-3xl'
+    class='bg-neutral-50 dark:bg-neutral-800 text-1xl font-medium text-center py-4 md:text-3xl'
   >
     {
       navItems.map((link) => (
@@ -41,7 +41,7 @@ const navItems = [
         </a>
       ))
     }
-    <button id='toggleDarkMode'>Toggle</button>
+    <input id="toggle" class="toggle" type="checkbox">
   </nav>
 </header>
 
@@ -51,10 +51,60 @@ const navItems = [
     text-underline-offset: 10px;
     border-radius: 100px;
   }
+
+  #toggle {
+    --size: 1.6rem;
+
+    appearance: none;
+    outline: none;
+    cursor: pointer;
+
+    margin-left: 10px;
+
+    width: var(--size);
+    height: var(--size);
+    box-shadow: inset calc(var(--size) * 0.33) calc(var(--size) * -0.25) 0;
+    border-radius: 999px;
+    color: black;
+
+    transition: all 500ms;
+
+    &:checked {
+      --ray-size: calc(var(--size) * -0.4);
+      --offset-orthogonal: calc(var(--size) * 0.65);
+      --offset-diagonal: calc(var(--size) * 0.45);
+
+      transform: scale(0.75);
+      color: white;
+      box-shadow:
+        inset 0 0 0 var(--size),
+        calc(var(--offset-orthogonal) * -1) 0 0 var(--ray-size),
+        var(--offset-orthogonal) 0 0 var(--ray-size),
+        0 calc(var(--offset-orthogonal) * -1) 0 var(--ray-size),
+        0 var(--offset-orthogonal) 0 var(--ray-size),
+        calc(var(--offset-diagonal) * -1) calc(var(--offset-diagonal) * -1) 0
+          var(--ray-size),
+        var(--offset-diagonal) var(--offset-diagonal) 0 var(--ray-size),
+        calc(var(--offset-diagonal) * -1) var(--offset-diagonal) 0
+          var(--ray-size),
+        var(--offset-diagonal) calc(var(--offset-diagonal) * -1) 0
+          var(--ray-size);
+    }
+
+    z-index: 1;
+    &:checked {
+      & ~ .background {
+        --bg: white;
+      }
+      & ~ .title {
+        --color: hsl(40, 100%, 50%);
+      }
+    }
+  }
 </style>
 
 <script>
-  const toggleButton = document.getElementById('toggleDarkMode');
+  const toggleButton = document.getElementById('toggle');
   const htmlElement = document.documentElement; // Esto selecciona el <html>
 
   // Agrega un event listener al botón
