--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -15,7 +15,7 @@ const { title, company, description, date, imgUrl } = Astro.props;
 <div
   class="relative mx-12 pb-12 grid before:absolute before:left-[-35px] before:block before:h-full before:border-l-2 before:border-black/20 dark:before:border-white/15 before:content-[''] md:grid-cols-5 md:gap-10 md:space-x-4]"
 >
-  <div class='relative pb-12 md:col-span-2'>
+  <div class='relative pb-8 md:pb-12 md:col-span-2'>
     <div class='sticky top-0'>
       <span
         class='text-slate-500 -left-[40px] absolute rounded-full text-5xl'
@@ -29,10 +29,10 @@ const { title, company, description, date, imgUrl } = Astro.props;
 
       <div>
         <h3 class='text-xl font-bold'>{title}</h3>
-        <h4 class='font-semibold text-xl text-gray-600 dark:text-white'>
+        <h4 class='font-semibold text-xl'>
           {company}
         </h4>
-        <time class='p-0 m-0 text-sm text-gray-600/80 dark:text-white/80'
+        <time class='p-0 m-0 text-sm '
           >{date}</time
         >
       </div>
@@ -43,7 +43,7 @@ const { title, company, description, date, imgUrl } = Astro.props;
     </div>
   </div>
   <div
-    class='relative flex flex-col gap-2 pb-4 text-gray-600 dark:text-gray-300 md:col-span-3'
+    class='relative flex flex-col gap-2 pb-4 md:col-span-3'
   >
     {description}
     <!-- {
