--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -14,10 +14,10 @@ import LinkedIn from '../components/icons/LinkedIn.astro';
     <Button href="mailto:vhgomez.py@gmail.com">Contact me</Button>
     <div class="flex justify-center gap-2 mt-3">
       <a href="https://github.com/bebigomez" target="_blank" rel="noopener" aria-label="bebigomez GitHub Page">
-        <GitHub class="h-7 w-7 hover:scale-110 transition-transform duration-300" />
+        <GitHub class="h-7 w-7 hover:scale-110 transition-transform duration-300 fill-current" />
       </a>
-      <a href="https://www.linkedin.com/in/victor-gomez-dev" target="_blank" rel="noopener" aria-label="Victor Gomez LinkedIn Page">
-        <LinkedIn class="h-7 w-7 hover:scale-110 transition-transform duration-300 rounded-md" />
+      <a href="https://www.linkedin.com/in/victorgomezdev/" target="_blank" rel="noopener" aria-label="Victor Gomez LinkedIn Page">
+        <LinkedIn class="h-7 w-7 hover:scale-110 transition-transform duration-300 rounded-md fill-current" />
       </a>
     </div>
   </div>
