--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -30,7 +30,7 @@ const navItems = [
           <a
             aria-label={item.label}
             href={item.url}
-            class=" text-gray-500 transition-colors hover:text-black"
+            class=" text-neutral-500 hover:text-black dark:text-neutral-200 dark:hover:text-neutral-300 transition-colors"
           >
             {item.title}
           </a>
@@ -42,7 +42,7 @@ const navItems = [
     >
       <a
         href="mailto:vhgomez.py@gmail.com"
-        class="text-gray-500 transition-colors hover:text-black"
+        class=" text-neutral-500 hover:text-black dark:text-neutral-200 dark:hover:text-neutral-300 transition-colors"
         >vhgomez.py@gmail.com</a
       >
       <div class="flex gap-2">
@@ -52,16 +52,16 @@ const navItems = [
           rel="noopener"
           aria-label="bebigomez GitHub Page"
           ><GitHub
-            class="h-5 w-5 transition-transform hover:scale-105 fill-current text-gray-500 hover:text-black"
+            class="h-5 w-5 transition-transform hover:scale-105 fill-current text-neutral-500 hover:text-black dark:text-neutral-200 dark:hover:text-neutral-300"
           /></a
         >
         <a
-          href="https://www.linkedin.com/in/victor-gomez-dev"
+          href="https://www.linkedin.com/in/victorgomezdev/"
           target="_blank"
           rel="noopener"
           aria-label="Victor Gomez LinkedIn Page"
           ><LinkedIn
-            class="h-5 w-5 transition-transform hover:scale-105 fill-current text-gray-500 hover:text-black"
+            class="h-5 w-5 transition-transform hover:scale-105 fill-current text-neutral-500 hover:text-black dark:text-neutral-200 dark:hover:text-neutral-300"
           /></a
         >
       </div>
