--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -31,7 +31,7 @@ const navItems = [
   <h1 class="text-2xl font-bold text-center mb-12 md:text-3xl">Projects</h1>
   <div class="mb-16 md:max-w-5xl md:mx-auto">
     {
-      navItems.map((project, index) => (
+      navItems.map((project) => (
         <div class="md:flex my-6">
           <img
             src={project.image}
