change cv download file in features section

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -27,7 +27,7 @@ import Button from '../components/Button.astro';
       
       <div class="text-center mt-4 md:text-left">
         <p>More info ↓</p>
-        <a class="bg-primary text-white font-regular py-1 px-2 rounded-xl shadow-2xl my-3" href="EN_Victor-Gomez_12-24.pdf" download="EN_Victor Gomez_02-24">Download curriculum as PDF</a>
+        <a class="bg-primary text-white font-regular py-1 px-2 rounded-xl shadow-2xl my-3" href="EN_Victor-Gomez_12-24.pdf" download="EN_Victor-Gomez_12-24.pdf">Download curriculum as PDF</a>
       </div>
     </div>
   </div>
